# logistics

./: .coverage  .env  Makefile  centrifugo_test.html  docker-compose.yml  pyproject.toml
LOGISTICS/: .gitignore  Makefile  docker-compose.yml
LOGISTICS/src/alembic/: env.py
LOGISTICS/src/alembic/versions/: 6f6c4490504a_initial_migration.py  ba41c4275202_add_orders_vehicle_enum_is_active.py
LOGISTICS/src/core/: config.py
LOGISTICS/src/orm/: database.py
mcp_app/: mcp_server.py  middleware.py
src/: config.py  main.py
src/alembic/: env.py
src/alembic/versions/: 093f21c0bb5a_tg_hash_and_tg_encrypted.py  47c3eeefaee9_add_telegram_id_to_user.py  6f6c4490504a_initial_migration.py  72c25f725051_add_vehicle_table.py  84fff1673b94_add_order_offers_table.py  8fe62d38224a_fix_order_foreign_key_and_add_transport_.py  ba41c4275202_add_orders_vehicle_enum_is_active.py  eb1f9be13b38_drop_old_telegram_id.py  fc873bc1274e_add_orders_table.py
src/api/: dependencies.py
src/api/bot/: bot_instance.py  setup.py
src/api/handlers/: auth.py  login.py  order.py  user.py  vehicle.py
src/api/middlewares/: bot_db_session.py  jwt_token.py  session.py
src/api/services/: notifications.py
src/api/views/: __init__.py  user_profile.py  vehicles.py
src/core/: config.py  constants.py  redis.py  security.py
src/orm/: database.py
src/orm/models/: __init__.py  company.py  driver.py  order.py  user.py  vehicle.py
src/orm/repositories/: base.py  company.py  driver.py  offer.py  order.py  user.py  vehicle.py
src/schemas/requests/: auth.py  orders.py  users.py  vehicles.py
src/schemas/responses/: auth.py  offer.py  orders.py  users.py  vehicles.py
tests/: conftest.py  test_centrifugo_realtime.py  test_security.py  test_user_service.py
(+68 files in other folders)
